fixed video on safari

--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -182,6 +182,7 @@
           transform: none;
           visibility: visible;
           opacity: 1;
+          transform: none;
         }
       }
     }
