--- a/src/scss/blocks/hero.scss
+++ b/src/scss/blocks/hero.scss
@@ -1,5 +1,6 @@
 .hero {
   &__bg {
+    position: relative;
     height: 440px;
   }
 
